исправил мелкие ошибки

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<title>Portfolio</title>
 </head>
 <body>
-	
 
 	<!-- header -->
 	<header class="header">
@@ -56,22 +55,22 @@
 
 					<div class="social">
 						<a class="social__link" href="#">
-							<img src="/assets/img/icons-intro/behance.svg" alt="">
+							<img src="./assets/img/icons-intro/behance.svg" alt="">
 						</a>
 						<a class="social__link" href="#">
-							<img src="/assets/img/icons-intro/dribbble.svg" alt="">
+							<img src="./assets/img/icons-intro/dribbble.svg" alt="">
 						</a>
 						<a class="social__link" href="#">
-							<img src="/assets/img/icons-intro/in.svg" alt="">
+							<img src="./assets/img/icons-intro/in.svg" alt="">
 						</a>
 						<a class="social__link" href="#">
-							<img src="/assets/img/icons-intro/facebook.svg" alt="">
+							<img src="./assets/img/icons-intro/facebook.svg" alt="">
 						</a>
 						<a class="social__link" href="#">
-							<img src="/assets/img/icons-intro/instagram.svg" alt="">
+							<img src="./assets/img/icons-intro/instagram.svg" alt="">
 						</a>
 						<a class="social__link" href="#">
-							<img src="/assets/img/icons-intro/twitter.svg" alt="">
+							<img src="./assets/img/icons-intro/twitter.svg" alt="">
 						</a>
 					</div>
 
